tests/NormalTests/paczka1/fuzzy1/90843544.err
Error in line 5: mGIJhc0d A304 0,20
Error in line 10: 1tboKwy1g A729 61,8
Error in line 1: mGIJhc0d A304 0,0
Error in line 17: S700 S942 31,8
Error in line 23: S700 A304 72,0
Error in line 25: 1tboKwy1g S700 71,0
